# filehash-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
mock/: jsonfile.json
src/: lib.rs  main.rs
