[package]
authors = ["Daniel Sonne Lehnberg <doddy@doddy.se>"]
categories = ["filesystem", "development-tools"]
description = "A small, fast library for hashing files written in Rust."
documentation = "https://docs.rs/filehash-rs"
edition = "2018"
exclude = ["mock/*"]
homepage = "https://github.com/doddydigitaldesign/filehash-rs"
keywords = ["filesystem", "hashing"]
license = "MIT"
name = "filehash-rs"
readme = "README.md"
repository = "https://github.com/doddydigitaldesign/filehash-rs"
version = "1.0.0"

[dependencies]
clap = "2.33.3"

[profile.release]
debug = false
lto = true
opt-level = 3
